--- a/package.json
+++ b/package.json
@@ -1,30 +1,10 @@
 {
-  "name": "emeral-forest",
+  "name": "emerald-forest",
   "displayName": "Emerald Forest",
-  "description": "VS Code Color Theme",
-  "version": "1.0.0",
-  "publisher": "chrisMartinezDev",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/chrisMartinezDeveloper/emerald-forest.git"
-  },
-  "keywords": [
-    "color",
-    "theme",
-    "color theme",
-    "dark",
-    "dark theme",
-    "green",
-    "gold",
-    "emerald",
-    "forest",
-    "emerald forest",
-    "chrisMartinezDev",
-    "chrisMartinezDev dark"
-  ],
-  "icon": "src/photos/icon.png",
+  "description": "Green and gold color theme",
+  "version": "0.0.1",
   "engines": {
-    "vscode": "^1.81.0"
+    "vscode": "^1.95.0"
   },
   "categories": [
     "Themes"
