--- a/package.json
+++ b/package.json
@@ -2,10 +2,29 @@
   "name": "emerald-forest",
   "displayName": "Emerald Forest",
   "description": "Green and gold color theme",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "publisher": "chrisMartinezDev",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chrisMartinezDeveloper/emerald-forest.git"
+  },
+  "keywords": [
+    "green",
+    "gold",
+    "emerald",
+    "forest",
+    "emerald forest",
+    "color theme",
+    "color",
+    "theme",
+    "dark theme",
+    "chrisMartinezDev",
+    "chrisMartinezDev dark"
+  ],
   "engines": {
     "vscode": "^1.95.0"
   },
+  "icon": "src/photos/icon.png",
   "categories": [
     "Themes"
   ],
